[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corp-internal-utils"
version = "1.0.0"
description = "Internal corporate utilities"
authors = [
    { name="Your Name" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.26.0"
]

[tool.setuptools]
packages = ["tools"]