[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinding-tools-dijkstra"
version = "1.0.0"
description = "Pathfinding tools including a dijkstra algorithm"
authors = [
    { name="Your Name" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.26.0"
]

[tool.setuptools]
packages = ["dijkstra"]